--- a/css/grid.css
+++ b/css/grid.css
@@ -1,22 +1,18 @@
-.wrapper {
+.wrapper{
     display: grid;
-    /*grid-template-columns: 1fr 1fr 1fr; */
-   /* grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); */
-   grid-template-columns: 20px repeat(auto-fit, minmax(240px, 1fr)) 20px;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    /*grid-gap: px for both (shortcut) */
+    grid-template-columns: repeat(auto-fit,minmax(240px,1fr));
+    grid-column-gap: 5px;
+    grid-row-gap: 3px;
 }
 
 .wrapper div{
     background-color:bisque;
 }
 
-/*since we named the id, can use #five directly */
+/* #five has been identified */
 #five {
-    grid-column-start: 1;
+    grid-column-start:1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: auto;
-
 }
